sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:5: error: not found: value getvaleur
  var Amin=getvaleur(deb)
           ^